src/main/java/org/example/ocp/correct/IConnectableUrl.java
package org.example.ocp.correct;

public interface IConnectableUrl {

    String getConnectionURL(final DatabaseServer databaseServer);
}
