src/main/java/org/example/ocp/bad/DatabaseType.java
package org.example.ocp.bad;

public enum DatabaseType {
    ORACLE,
    MYSQL,
    SQL_SERVER
}
